manifests/system/calico/whisker/traefik-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
    name: traefik
spec:
    controllerName: traefik.io/gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: calico-system
spec:
  gatewayClassName: traefik

  listeners:
  - protocol: HTTP
    port: 8180
    name: traefik-gateway
    allowedRoutes:
      namespaces:
        from: All
